[package]
name = "ibrahim"
version = "0.1.0"
edition = "2021"

[profile.dev.package.askama_derive]
opt-level = 3

[dependencies]
axum = "0.6"
askama_axum = "0.3"
color-backtrace = "0.6"
askama = { version = "0.12.1", features = ["with-axum"] }
tower-http = { version = "0.4.4", features = ["fs", "trace"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
